Fix settings menu z-index

--- a/resources/style.css
+++ b/resources/style.css
@@ -3,7 +3,7 @@
     background: rgba(0,0,0,0.9);
     width: 100%;
     height: 100%;
-    z-index: 500;
+    z-index: 9999;
     top: 0;
     left: 0;
     position: fixed;
